# illpad

./: Cargo.toml  README.md
src/: main.rs
src/text/: mod.rs  text_buffer.rs
src/ui/: app.rs  default.css  editor_box.rs  file_writer.rs  mod.rs
