[package]
name = "illpad"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_12"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
relm4 = "0.9.1"
relm4-components = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["time"]}
